# tessera

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: feynman_common.py  run_btc_csp.py  run_camels_multi_basin.py  run_camels_streamflow.py  run_cas_simplification_validation.py  run_const_opt_demo.py  run_deep_csp.py  run_diff_eml_jax.py  run_diff_sr_compare.py  run_dynamical_csp.py  run_equivalence_class_count.py  run_feynman_additive_poly_ab.py  run_feynman_constopt_ab.py  run_feynman_coord_discovery_ab.py  run_feynman_counterfactual_validation.py  run_feynman_csp.py  run_feynman_decompose.py  run_feynman_decompose_ab.py  run_feynman_decompose_v2_ab.py  run_feynman_extended.py  run_feynman_reduce_downweight_ab.py  run_feynman_signature_diagnostic.py  run_feynman_snap_ab.py  run_feynman_subset.py  run_feynman_sufficient_stats_ab.py  run_feynman_vs_baselines.py  run_hamiltonian_discovery.py  run_heat_equation_abc_mvp71.py  run_heat_equation_adaptive_mvp_c6.py  run_heat_equation_causal_axes_mvp_c4.py  run_heat_equation_counterfactual_mvp_c5.py  run_heat_equation_discovery.py  run_heat_equation_mdl_mvp_c3.py  run_heat_equation_mode1_parsimony_zero.py  run_heat_equation_multitrajectory.py  run_heat_equation_sample_complexity.py  run_heat_equation_traintest_computescale.py  run_ik_planar_3dof.py  run_interval_bound_tightness.py  run_lorenz63.py  (+10 more)
benchmarks/data/: load_camels_basin.py  load_ncep_reanalysis.py
benchmarks/results/: btc_csp.md  camels_01013500.md  camels_multi_basin.md  cas_simplification_validation.md  deep_csp.md  diff_eml_jax.md  dynamical_csp.md  equivalence_class_count.md  feynman_additive_poly_ab.md  feynman_constopt_ab.md  feynman_coord_discovery_ab.md  feynman_counterfactual_validation.md  feynman_csp.md  feynman_decompose.md  feynman_decompose_ab.md  feynman_decompose_v2_ab.md  feynman_extended.md  feynman_extended_baseline_2026_05_28.md  feynman_reduce_downweight_ab.md  feynman_signature_diagnostic.md  feynman_snap_ab.md  feynman_subset.md  feynman_sufficient_stats.md  feynman_vs_baselines.md  hamiltonian_discovery.md  heat_equation_abc_mvp71.md  heat_equation_adaptive_mvp_c6.md  heat_equation_causal_axes_mvp_c4.md  heat_equation_counterfactual_mvp_c5.md  heat_equation_discovery.md  heat_equation_mdl_mvp_c3.md  heat_equation_mode1_parsimony_zero.md  heat_equation_multitrajectory.md  heat_equation_sample_complexity.md  heat_equation_traintest_computescale.md  ik_planar_3dof.md  interval_bound_tightness.md  lorenz63.md  mnist_csp.md  mnist_decompose.md  (+7 more)
docs/: PROJECT_GOALS.md  README.md  framework_synthesis.md  koopman.md  process.md  roadmap.md
docs/milestones/: gpu_backend.md
docs/planned/: methodology_workbench_and_library.md  model_class_taxonomy.md  per_class_loss_and_multi_objective.md  roadmap.md  symbolic_network_gpu.md
docs/research/: algorithmic_information_for_sr.md  analytical_delta_loss.md  benchmark_score_improvement.md  c2_distributional_trees_analysis.md  c3_mdl_analysis.md  c5_counterfactual_eval_analysis.md  c6_residual_diagnostics_analysis.md  c7_coordinate_discovery.md  c8_additive_polynomial.md  deep_symbolic_csp.md  differentiable_eml_jax.md  energy_based_symbolic_learning.md  fit_as_perfect_info_game.md  from_data_to_mechanism.md  hamiltonian_ising_for_sr.md  high_dim_symbolic_regression.md  hybrid_symbolic_networks.md  invariance_in_sr.md  methodology_workbench_and_library.md  network_sr_and_budget_allocation.md  optimization_regimes.md  process_discovery_sr.md  randomized_recovery_bounds_for_sr.md  search_as_energy_min.md  sr_for_inverse_kinematics.md
docs/research_notes/: fit_as_perfect_info_game.md  gpu_and_cv_via_sr.md  measure_theory_and_perfect_info.md  search_as_energy_min.md
docs/shipped/: analytical_delta_loss.md  benchmark_difficulty_and_climb_then_simplify.md  benchmark_score_improvement.md  c2_distributional_trees_analysis.md  c3_mdl_analysis.md  c5_counterfactual_eval_analysis.md  c6_residual_diagnostics_analysis.md  csp_symbolic_regression.md  dancing_links_for_sr.md  dependency_structure.md  framework_synthesis.md  randomized_recovery_bounds_for_sr.md  sr_for_inverse_kinematics.md  symbolic_network_jax_optimization.md
notebooks/: tessera_cnn_diffeml_cifar.ipynb  tessera_feynman_constopt_ab.ipynb  tessera_jax_smoke_test.ipynb  tessera_jax_tier1.ipynb  tessera_jax_tier2.ipynb  tessera_jax_tier3.ipynb  tessera_mnist.ipynb  tessera_symbolic_network_cifar.ipynb  tessera_symbolic_network_mnist.ipynb
scripts/: audit_deps.py
src/tessera/: __init__.py  backend.py
tests/: test_backend.py  test_dependency_structure.py  test_gp_jax_integration.py  test_jax_backend_2d.py  test_jax_backend_tier1.py  test_jax_backend_tier2.py  test_jax_backend_tier3.py
tests/expression/: test_cache.py  (+22 more)
(+104 files in other folders)
