[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.1.0"
description = "Applied-math primitives for compositional ML — measures, symbolic operators, state-space inference, differentiable feature engineering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "David Chen" },
]
keywords = [
  "symbolic-regression",
  "dynamical-systems",
  "measure-theory",
  "koopman",
  "state-space-models",
  "applied-mathematics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
]

# Minimal runtime deps — everything else is optional via [project.optional-dependencies].
# We deliberately avoid pysindy / pykoopman to dodge their hand-install pain;
# tessera reimplements the primitives we need directly.
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "numba>=0.60",
  "pandas>=2.0",
]

[project.optional-dependencies]
sympy = ["sympy>=1.12"]
pysr  = ["pysr>=1.0"]
dev   = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
# JAX backend — required for use_jax_population_eval, batched evaluation,
# const_opt_jax, and the symbolic-network Colab GPU path. JAX CPU build
# works locally; jaxlib needs CUDA wheels on the target system for GPU.
jax   = ["jax>=0.4", "jaxlib>=0.4"]
# Benchmark / notebook dependencies. None of these are needed for the
# core tessera library; install with `pip install -e ".[benchmarks]"`
# to run the benchmark scripts and notebooks.
benchmarks = [
  "scikit-learn>=1.3",   # MNIST loading via fetch_openml
  "matplotlib>=3.7",     # notebook visualizations
  "requests>=2.31",      # CAMELS / DAYMET HTTP API loaders
  "netCDF4>=1.6",        # weather PDE NCEP reanalysis netcdf
  "pyarrow>=14.0",       # CAMELS basin parquet cache
]
all   = [
  "sympy>=1.12", "pysr>=1.0",
  "scikit-learn>=1.3", "matplotlib>=3.7", "requests>=2.31",
  "netCDF4>=1.6", "pyarrow>=14.0",
  "jax>=0.4", "jaxlib>=0.4",
]

[project.urls]
"Source"        = "https://github.com/davechendatascience/tessera"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tessera = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
